# firstchain

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.py  pyproject.toml
src/: auth.py  config.py  db.py  llm.py  main.py  models.py
src/tests/: conftest.py  test_auth.py  test_llm.py  test_main.py
text/: theodorus.txt
